--- a/index.html
+++ b/index.html
@@ -543,9 +543,7 @@
                                         <i class="material-icons">more_vert</i>
                                     </a>
                                     <ul class="dropdown-menu pull-right">
-                                        <li><a href="javascript:void(0);">Action</a></li>
-                                        <li><a href="javascript:void(0);">Another action</a></li>
-                                        <li><a href="javascript:void(0);">Something else here</a></li>
+                                        <li><a href="javascript:void(0);">Open Gallery</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -562,21 +560,14 @@
                                 <!-- Wrapper for slides -->
                                 <div class="carousel-inner" role="listbox">
                                     <div class="item active">
-                                        <img src="images/image-gallery/10.jpg" />
+                                        <img src="images/image-gallery/1.jpg" />
                                         <div class="carousel-caption">
-                                            <h3>First slide label</h3>
-                                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                                            <h3>Penyerahan Hewan Qurban</h3>
+                                            <p>Mantap!!</p>
                                         </div>
                                     </div>
                                     <div class="item">
-                                        <img src="images/image-gallery/12.jpg" />
-                                        <div class="carousel-caption">
-                                            <h3>Second slide label</h3>
-                                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                                        </div>
-                                    </div>
-                                    <div class="item">
-                                        <img src="images/image-gallery/19.jpg" />
+                                        <img src="images/image-gallery/3.jpg" />
                                         <div class="carousel-caption">
                                             <h3>Third slide label</h3>
                                             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
